--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.2.0",
     "vue-svg-loader": "^0.16.0",
     "vue2-editor": "^2.10.2",
+    "vuejs-countdown": "^0.2.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
