--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-svg-loader": "^0.16.0",
     "vue2-editor": "^2.10.2",
